; ModuleID = '/home/carl/AnghaBench/freebsd/sys/security/mac_test/extr_mac_test.c_test_syncache_create_mbuf.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/security/mac_test/extr_mac_test.c_test_syncache_create_mbuf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mbuf = type { i32 }
%struct.label = type { i32 }

@MAGIC_SYNCACHE = common dso_local global i32 0, align 4
@MAGIC_MBUF = common dso_local global i32 0, align 4
@syncache_create_mbuf = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.label*, %struct.mbuf*, %struct.label*)* @test_syncache_create_mbuf to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_syncache_create_mbuf(%struct.label* %0, %struct.mbuf* %1, %struct.label* %2) #0 {
  %4 = alloca %struct.label*, align 8
  %5 = alloca %struct.mbuf*, align 8
  %6 = alloca %struct.label*, align 8
  store %struct.label* %0, %struct.label** %4, align 8
  store %struct.mbuf* %1, %struct.mbuf** %5, align 8
  store %struct.label* %2, %struct.label** %6, align 8
  %7 = load %struct.label*, %struct.label** %4, align 8
  %8 = load i32, i32* @MAGIC_SYNCACHE, align 4
  %9 = call i32 @LABEL_CHECK(%struct.label* %7, i32 %8)
  %10 = load %struct.label*, %struct.label** %6, align 8
  %11 = load i32, i32* @MAGIC_MBUF, align 4
  %12 = call i32 @LABEL_CHECK(%struct.label* %10, i32 %11)
  %13 = load i32, i32* @syncache_create_mbuf, align 4
  %14 = call i32 @COUNTER_INC(i32 %13)
  ret void
}

declare dso_local i32 @LABEL_CHECK(%struct.label*, i32) #1

declare dso_local i32 @COUNTER_INC(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
